tests/ui/errors/snapshots/parse_duplicate_struct_field_in_definition.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Duplicate field
   ╭─[test.lis:2:12]
 1 │ 
 2 │ struct S { x: int, x: string }
   ·            ┬       ┬
   ·            │       ╰── defined again
   ·            ╰── first defined
   ╰────
  help: Remove the duplicate field `x` · code: [parse.duplicate_struct_field]
