tests/ui/errors/snapshots/parse_duplicate_struct_field_in_instantiation.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Duplicate field
   ╭─[test.lis:5:11]
 4 │ fn test() {
 5 │   Point { x: 1, y: 2, x: 3 }
   ·           ┬           ┬
   ·           │           ╰── defined again
   ·           ╰── first defined
 6 │ }
   ╰────
  help: Remove the duplicate field `x` · code: [parse.duplicate_struct_field]
