tests/ui/errors/snapshots/parse_embed_field_with_attribute.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Syntax error
   ╭─[test.lis:4:3]
 3 │ struct S {
 4 │   #[json("base")] embed Base,
   ·   ───────┬───────
   ·          ╰── embedded field cannot have attributes
 5 │ }
   ╰────
  help: An embedded field takes no attributes; its serialization follows Go's anonymous-field inlining · code: [parse.syntax_error]
