tests/ui/errors/snapshots/parse_enum_assigned_variant_string.snap
---
source: tests/ui/errors/mod.rs
---
  [error] Assigned enum variant
   ╭─[test.lis:3:7]
 2 │ enum HttpMethod {
 3 │   Get = "GET",
   ·       ┬
   ·       ╰── enum variants cannot have assigned values
 4 │   Post = "POST",
   ╰────
  help: Lisette enums are sum types, not Go const groups. To model a Go defined primitive type, use a named primitive type such as `pub struct Weekday(int)` with package-level constants · code: [parse.enum_assigned_variant]
