tests/ui/errors/snapshots/parse_error_function_unclosed_generic_at_eof.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Syntax error
   ╭─[test.lis:1:6]
 1 │ fn f<
   ╰────
  code: [parse.unexpected_token]
