tests/ui/errors/snapshots/parse_error_impl_unclosed_generic_at_eof.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Syntax error
   ╭─[test.lis:1:6]
 1 │ impl<
   ╰────
  code: [parse.unexpected_token]
